Css fix to truncate the header.

--- a/django_modalview/static/django_modalview/css/modal.css
+++ b/django_modalview/static/django_modalview/css/modal.css
@@ -26,6 +26,9 @@ div.modal-header h2 {
     vertical-align: middle;
     margin: 0px;
     width: 500px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 div.modal-body textarea {
